# cookiecutter-pypackage

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  package.json  pytest.ini  requirements.txt  setup.cfg  tox.ini  webpack.config.js
{{cookiecutter.project_name}}/.github/workflows/: codeql-analysis.yml  release.yml  tests.yml
{{cookiecutter.project_name}}/tests/: .gitignore  settings.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: release.yml  tests.yml
{{cookiecutter.project_slug}}/tests/: settings.py
